<resources>
    <string name="app_name">A Home Within</string>
    <string name="action_settings">Settings</string>

    <string name="your_library">My Library</string>
    <string name="training_and_tools">Training And Tools</string>
    <string name="services">Services</string>
    <string name="learn_more">Learn More</string>
    <string name="video">Video</string>
    <string name="account">Account</string>
    <string name="about_us">About Us</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="profile">My profile</string>
    <string name="home">Home</string>
    <string name="test">Home</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="forget_password">Forgot Your Password?</string>
    <string name="create_new_account">Join Now Free</string>
    <string name="no_account">No Account?</string>
    <string name="hint_user_name">User name</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone number</string>
    <string name="hint_email">Email address</string>
    <string name="reset_password">Please enter your email</string>
    <string name="or">Or</string>
    <string name="reset_email_hint">Email</string>
    <string name="hint_reset_phone">Phone</string>
    <string name="reset">Reset</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="your_profile">User Profile</string>

    <string name="subscribe_title">Subscribe to Newsletter</string>
    <string name="recommendations_title">Recommendations</string>
    <string name="pro_bono_title">Pro-Bono Therapists near you</string>
    <string name="events_title">Upcoming Events</string>
    <string name="Map">Map</string>
    <string name="location_permission_denied">Location permission denied</string>
    <string name="permission_required_toast">Permission Required</string>
    <string name="permission_rationale_location">Why we need your location...</string>
    <string name="start_chat">Start Chat</string>
    <string name="events">Events</string>
    <string name="library">My Library</string>
    <string name="near_you">Near you</string>
    <string name="recommended">Recommended</string>
    <string name="type">type</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="hint_desp">describe yourself !</string>

    <string name="message_hint">Say anything</string>
    <string name="send">Send</string>
    <string name="profile_other">Other\'s Profile</string>
    <string name="profile_me">My Profile</string>
    <string name="community">Community</string>
    <string name="service_provider">Service Provider</string>
    <string name="chat">Chat</string>
    <string name="chat_now">Chat now...</string>
    <string name="chatRoom">Chat Room</string>
    <string name="chatting">Chatting</string>
    <string name="no_data_available">Oops, it looks like you don\'t have any item in your library yet. Go to tools and trainings to see what resources are available!</string>
    <string name="even_transition">event_image_transition</string>
    <string name="snackbar_purchased_text">You have new training materials!</string>
    <string name="snackbar_exit_text">Click back one more time to exit</string>
</resources>
