<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/tvUserLoginAdvice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="30dp"
        android:gravity="center"
        android:text="For a full experience, please Log in or Register"
        android:textSize="25sp"/>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvUserLoginAdvice"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/tilPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilEmail">

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tilPassword"
        android:textAlignment="center"
        android:text="@string/login"/>

    <TextView
        android:id="@+id/tvForgetPasswd"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@id/btnLogin"
        android:layout_centerHorizontal="true"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/tvNoAccount"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_below="@+id/tvForgetPasswd"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/no_account"
        android:textAlignment="center"/>

    <Button
        android:id="@+id/btnJoin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvNoAccount"
        android:text="@string/create_new_account"
        android:textAlignment="center"/>


</RelativeLayout>
