<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <EditText
        android:id="@+id/etUserName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_edittext_height"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_user_name"/>

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_edittext_height"
        android:layout_alignEnd="@id/etUserName"
        android:layout_alignLeft="@id/etUserName"
        android:layout_alignRight="@id/etUserName"
        android:layout_alignStart="@id/etUserName"
        android:layout_below="@+id/etUserName"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/hint_password"
        android:inputType="textPassword"/>

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_edittext_height"
        android:layout_alignEnd="@id/etUserName"
        android:layout_alignLeft="@id/etUserName"
        android:layout_alignRight="@id/etUserName"
        android:layout_alignStart="@id/etUserName"
        android:layout_below="@id/etPassword"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"/>

    <EditText
        android:id="@+id/etPhone"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_edittext_height"
        android:layout_alignEnd="@id/etUserName"
        android:layout_alignLeft="@id/etUserName"
        android:layout_alignRight="@id/etUserName"
        android:layout_alignStart="@id/etUserName"
        android:layout_below="@+id/etEmail"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:hint="@string/hint_phone"
        android:inputType="phone"/>

    <EditText
        android:id="@+id/etDesp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/profile_edittext_height"
        android:layout_alignEnd="@id/etUserName"
        android:layout_alignLeft="@id/etUserName"
        android:layout_alignRight="@id/etUserName"
        android:layout_alignStart="@id/etUserName"
        android:layout_below="@+id/etPhone"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="start"
        android:hint="@string/hint_desp"/>

    <Spinner
        android:id="@+id/spUserType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@id/etUserName"
        android:layout_alignLeft="@id/etUserName"
        android:layout_alignRight="@id/etUserName"
        android:layout_alignStart="@id/etUserName"
        android:layout_below="@+id/etDesp"
        android:entries="@array/user_type_array"
        android:spinnerMode="dropdown"
        android:gravity="start"/>

</RelativeLayout>